#index shows Names of Random Tipps

--- a/app/views/tipps/index.html.erb
+++ b/app/views/tipps/index.html.erb
@@ -1,9 +1,8 @@
-index.html.erb
-
+<h1>Welcome to the randomizer</h1>
 <ul>
   <% @random_choices.each do |tipp| %>
   <li>
-    <%= tipp %>
+    Name: <%= tipp.name %>
   </li>
   <% end %>
 </ul>
