--- a/app/views/tipps/index.html.erb
+++ b/app/views/tipps/index.html.erb
@@ -2,7 +2,7 @@
 <ul>
   <% @random_choices.each do |tipp| %>
   <li>
-    Name: <%= tipp.name %>
+    Activity name: <%= tipp.name %>
   </li>
   <% end %>
 </ul>
