--- a/app/views/tipps/index.html.erb
+++ b/app/views/tipps/index.html.erb
@@ -1,4 +1,10 @@
 <h1>Welcome to the randomizer:</h1>
+
+  
+    Here: <%= @random_choices[0] %>
+    Here: <%= @random_choices[1] %>
+
+
 <ul>
   <% @random_choices.each do |tipp| %>
   <li>
