--- a/app/views/tipps/new.html.erb
+++ b/app/views/tipps/new.html.erb
@@ -4,9 +4,9 @@
 <%= f.label :streetname %><br />
 <%= f.text_field :streetname %><br />
 <%= f.label :user_id %><br />
-<%= f.text_field :user_id %><br />
+<%= f.hidden_field :user_id, :value => current_user.id %><br />
 <%= f.label :city_id %><br />
-<%= f.text_field :city_id %><br />
+<%= f.hidden_field :city_id, :value => 1 %><br />
 <%= f.submit %>
 <% end %>
 
