--- a/app/views/tipps/index.html.erb
+++ b/app/views/tipps/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to the randomizer:</h1>
-<p id="error"><%= flash[:noticeit] %></p>
+<p id="error"><%= flash[:notice] %></p>
 
   <% if current_user %>
     Hi <%= current_user.name%>, welcome again!
