--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= link_to('Logout', destroy_user_session_path, :method => :delete) %> 
+<%= link_to('new', new_tipp_path, :method => :get) %>  
 <%= yield %>
 
 </body>
