--- a/app/views/tipps/new.html.erb
+++ b/app/views/tipps/new.html.erb
@@ -23,6 +23,10 @@
 <% end %>
 
 <p id="error"><%= flash[:error] %></p>
+<p id="error"><%= flash[:taken] %></p>
 
 
-
+<% if flash[:taken]%>
+Someone already gave us that tip
+Would you like to add a comment?
+<% end %>
