Users have Karma and transfer in creation to tipp

--- a/app/views/tipps/index.html.erb
+++ b/app/views/tipps/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to the randomizer:</h1>
 <p id="error"><%= flash[:notice] %></p>
-
+<%= request.original_url %>
   <% if current_user %>
     Hi <%= current_user.name%>, welcome again!
   <% end %>  
