--- a/app/views/tipps/index.html.erb
+++ b/app/views/tipps/index.html.erb
@@ -1,17 +1,8 @@
 <h1>Welcome to the randomizer:</h1>
 <p id="error"><%= flash[:notice] %></p>
-<%= request.original_url %>
-  <% if current_user %>
-    Hi <%= current_user.name%>, welcome again!
-  <% end %>  
-    <br />
-    <br />
-    Here: <%= @random_choices[0] %>
 
-<ul>
   <% @random_choices.each do |tipp| %>
-  <li>
-    Activity: <%= tipp.name %> (<%= tipp.streetname %>,<%= tipp.city_id %>)
-  </li>
+  <article>
+    <h2> <%= tipp.name %> </h2> (<%= tipp.streetname %>,<%= tipp.city_id %>)
+  </article>
   <% end %>
-</ul>
