--- a/app/views/tipps/new.html.erb
+++ b/app/views/tipps/new.html.erb
@@ -5,6 +5,8 @@
   <%= f.text_field :name %><br />
   <%= f.label :streetname %><br />
   <%= f.text_field :streetname %><br />
+  <%= f.label :website %><br />
+  <%= f.text_field :website %><br />
   (<%= f.label :user_id %>
   <%= f.hidden_field :user_id, :value => current_user.id %> +
   <%= f.label :city_id %>
