--- a/app/views/tipps/new.html.erb
+++ b/app/views/tipps/new.html.erb
@@ -1,12 +1,19 @@
 <h1>Send us your tipp!</h1>
 
-<%= form_for @tipp do |f|%>
+<%= form_for @tipp, :html => {multiparts: true} do |f|%>
   <%= f.label :name %><br />
   <%= f.text_field :name %><br />
   <%= f.label :streetname %><br />
   <%= f.text_field :streetname %><br />
   <%= f.label :website %><br />
   <%= f.text_field :website %><br />
+
+  <%= f.label "Upload an Image" %><br />
+  <%= f.file_field :image %><br />
+  
+  <%= f.label :remote_image_url, "or give us a link" %><br />
+  <%= f.text_field :remote_image_url %><br />
+  
   (<%= f.label :user_id %>
   <%= f.hidden_field :user_id, :value => current_user.id %> +
   <%= f.label :city_id %>
