--- a/app/views/tipps/index.html.erb
+++ b/app/views/tipps/index.html.erb
@@ -9,17 +9,22 @@
 
   <% @random_choices.each do |tipp| %>
   <article style="background-image: url(<%= tipp.image_url if tipp.image? %><%= tipp.remote_image_url if tipp.image? %>)">
-    <h2><% if tipp.offer %> Special! @ <% end %> <%= tipp.name %> </h2> 
-
+    <div class='textbox'>
+      <h2><% if tipp.offer %> Special! @ <% end %> <%= tipp.name %> </h2> 
+    </div>
 <ul>
-<li>
+
+    <div class='textbox'>
     <%= tipp.streetname %>,<%= tipp.city_id %>
-    <br />
-    <% if Comment.find_by(tipp_id: tipp.id) %>
+    </div>
+ 
+
+<% if Comment.find_by(tipp_id: tipp.id) %>
+    <div class='textbox comment'>   
     <%= Comment.random_comment(tipp.id) %>
+    </div>
     <% end %>
-</li> 
-  <% if tipp.website %><li><%= tipp.website %></li><% end %> 
+  <% if tipp.website %><div class='textbox'><%= tipp.website %></div><% end %> 
  
 </ul>
   </article>
