Added feedback controller

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,4 +1,11 @@
-<h1>Send us your Comment!</h1>
+<h1>Something to add?</h1>
+
+<p>It seems like the @Tipp you where going to send already exists, would you like to share with the people what to you like the most of this place?</p>
+
+or
+
+<p> Thanks for sharing your @Tipp! Feel free to share with the people the reason why you decided to share it. What do you like the most of this place?</p>
+
 
 <%= form_for @comment do |f|%>
   <%= f.label :user_id %>
