--- a/app/views/tipps/new.html.erb
+++ b/app/views/tipps/new.html.erb
@@ -1,38 +1,30 @@
 <h1>Send us your tipp!</h1>
 
 <%= form_for @tipp, :html => {multiparts: true} do |f|%>
+  <div>
   <%= f.label :name %><br />
   <%= f.text_field :name %><br />
-  <%= f.label :streetname %><br />
+  <%= f.label :streetname,"Address" %><br />
   <%= f.text_field :streetname %><br />
   <%= f.label :website %><br />
   <%= f.text_field :website %><br />
-
+  </div>
+  <div>
   <%= f.label "Upload an Image" %><br />
   <%= f.file_field :image %><br />
   
   <%= f.label :remote_image_url, "or give us a link" %><br />
   <%= f.text_field :remote_image_url %><br />
   
-  (<%= f.label :user_id %>
-  <%= f.hidden_field :user_id, :value => current_user.id %> +
-  <%= f.label :city_id %>
-  <%= f.hidden_field :city_id, :value => 1 %>)<br />
-  <p>
-  <%= f.fields_for :comments do |comment_form| %>
-     
-      <%= comment_form.label :content %>
-      <br/ >
-      <%= comment_form.text_area :content %>
-  <% end %>
-  </p>
-  
-
+  <%= f.hidden_field :user_id, :value => current_user.id %> 
+  <%= f.hidden_field :city_id, :value => 1 %>
+  </div>
   <%= f.submit %>
 <% end %>
 
 <h2 id="error"><%= flash[:error] %></h2>
 <h2 id="error"><%= flash[:taken] %></h2>
+<h2 id="error"><%= flash[:addcomment] %></h2>
 
 <% if flash[:notice]%>
 <h2 id="error"><%= flash[:notice] %></h2>
@@ -43,6 +35,11 @@ Feel free to share more Tipps.
 <% if flash[:taken]%>
 <h2> Someone already gave us that tip</h2>
 Would you like to <%= link_to "add a comment", {:controller => "comments", :action => "new", :tipp_id => "#{flash[:tipp]}"}%>?
+<% end %>
+
+<% if flash[:addcomment]%>
+<h2> Your tipp has been added!</h2>
+Would you like to <%= link_to "add a comment", {:controller => "comments", :action => "new", :tipp_id => "#{flash[:tipp]}"}%> to it?
 <% end %>
 
 
