--- a/app/views/tipps/new.html.erb
+++ b/app/views/tipps/new.html.erb
@@ -28,9 +28,8 @@
 
 <% if flash[:notice]%>
 <h2 id="error"><%= flash[:notice] %></h2>
-Feel free to share more Tipps.
+Would you like to share more Tipps?
 <% end %>
-
 
 <% if flash[:taken]%>
 <h2> Someone already gave us that tip</h2>
