--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,29 +1,13 @@
 <h1>Something to add?</h1>
 
-<p>It seems like the @Tipp you where going to send already exists, would you like to share with the people what to you like the most of this place?</p>
-
-or
-
-<p> Thanks for sharing your @Tipp! Feel free to share with the people the reason why you decided to share it. What do you like the most of this place?</p>
-
+<p>Thanks for sharing your Tipps! Feel free to share with the people the reason why you decided to share it. What do you like the most of this place?</p>
 
 <%= form_for @comment do |f|%>
-  <%= f.label :user_id %>
-  <%= f.hidden_field :user_id, :value => current_user.id %> +
-   <% if @tipp %>
-  <%= f.label :tipp_id %>
+  <%= f.hidden_field :user_id, :value => current_user.id %> 
   <%= f.hidden_field :tipp_id, :value => @tipp.id %><br />
-  <% end %>
-  <%= f.label :content %><br />
+  <%= f.label :content, "Your message:" %><br />
   <%= f.text_area :content %><br />
   <%= f.submit %>
 <% end %>
 
-<p id="error"><%= flash[:error] %></p>
-<p id="error"><%= flash[:taken] %></p>
-
-
-<% if flash[:taken]%>
-Someone already gave us that tip
-Would you like to add a comment?
-<% end %>
+<p id="error"> <%= flash[:error] %> </p>
