--- a/app/views/tipps/index.html.erb
+++ b/app/views/tipps/index.html.erb
@@ -21,7 +21,10 @@
         </div>
       <% end %>
       
-      <% if tipp.website %><div class='textbox'><%= tipp.website %></div><% end %> 
+      <% if tipp.website %><div class='textbox'>
+        <a href="<%= tipp.website %>"> W W W </a>
+      </div>
+      <% end %> 
    
     </article>
   <% end %>
