--- a/app/views/tipps/new.html.erb
+++ b/app/views/tipps/new.html.erb
@@ -13,16 +13,23 @@
   </div>
   <div>
   <%= f.label "Upload an Image" %><br />
-  <%= f.file_field :image %><br />
-  
+  <%= f.file_field :image  %><br />
+   
   <%= f.label :remote_image_url, "or give us a link" %><br />
   <%= f.text_field :remote_image_url %><br />
   
   <%= f.hidden_field :user_id, :value => current_user.id %> 
   <%= f.hidden_field :city_id, :value => 1 %>
   </div>
-  <%= f.submit %>
+  <%= f.submit "Share it!",:class => 'button' %>
 <% end %>
+
+<div id="taken">
+<h2> Someone already gave us that tip</h2>
+Would you like to <%= link_to "add a comment", :controller => "comments", :action => "new", :tipp_id => ""  %>?
+</div>
+
+
 
 <h2 id="error"><%= flash[:error] %></h2>
 <h2 id="error"><%= flash[:taken] %></h2>
@@ -44,4 +51,6 @@ Would you like to <%= link_to "add a comment", {:controller => "comments", :acti
 <% end %>
 
 
-<script> App.checkDuplicated() </script>
+<script> 
+  App.checkDuplicated()
+</script>
