--- a/app/views/tipps/index.html.erb
+++ b/app/views/tipps/index.html.erb
@@ -26,7 +26,7 @@
       </div>
       <% end %> 
    
-   <a href="https://twitter.com/share" data-text="On my way to: <%= tipp.name%>!! #randomizer #barcelona" data-url="www.randomizer.com" data-related="@kind_of_Ruby" <%if tipp.twitter %> <%=tipp.twitter %> <% end %> class="twitter-share-button" data-lang="en" data-count="none" > Tweet </a>
+   <a href="https://twitter.com/share" data-text="On my way to: <%= tipp.name%>!! #randomizer #barcelona" data-url="www.randomizer.com" data-related="@kind_of_Ruby" <%if tipp.twitter %>data-via="<%=tipp.twitter %><% end %>" class="twitter-share-button" data-lang="en" data-count="none" > Tweet </a>
    
     </article>
   <% end %>
