--- a/app/views/tipps/new.html.erb
+++ b/app/views/tipps/new.html.erb
@@ -4,10 +4,10 @@
   <div>
   
   <%= f.label :name %><br />
-  <%= f.text_field :name, :autofocus => true, :required => true, :id => "tipp_name" %><br />
+  <%= f.text_field :name, :autofocus => true,  :id => "tipp_name" %><br />
 
   <%= f.label :streetname,"Address" %><br />
-  <%= f.text_field :streetname, :required => true %><br />
+  <%= f.text_field :streetname  %><br />
   <%= f.label :website %><br />
   <%= f.text_field :website, :type => "url" %><br /> 
 
