--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,9 @@
-<h2>Sign up</h2>
+
+
+<section class="form col-xs-10 col-xs-offset-1">
+<header>
+  <h1>Sign up</h1>
+</header>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -19,3 +24,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</section>
