finished forms-styling

--- a/app/assets/stylesheets/tipp.css.scss
+++ b/app/assets/stylesheets/tipp.css.scss
@@ -2,81 +2,118 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @font-face {
-        font-family: "NovitoNova";
-        src: url("NovitoNova-Regular.otf") format('opentype');
-        font-family: "junc";
-        src: url("junction-regular.woff") format('woff');
-    }
+        font-family: "QuickDash";
+        src: url("Quicksand_Dash.otf") format('otf');
+        
+        font-family: "texgyros";
+        src: url("texgyreheroscn-regular.otf") format('opentype');
+    };
 
-
-
-body {  font-family: "junc";
-        background-image: url("background.jpeg");
-        background-repeat: repeat;
-      }
-
-body, html { height: 100% }
+body {  background-image: url("background.jpeg");
+        background-repeat: repeat; }
+body, html { height: 100%;}
 
 .container-fluid { height: 100%}
 
-.form { margin-top: 10%;
-        display: inline-block;
-        padding: 0;
-        // margin: 0 auto;
-        text-align: center;
-        color:white;
-
-  div{ background-color: #628e9d};
-
-      h1{     font-family: "junc";
-              background-color: #c3d29f;
-              width:100%;
-              padding:20px;
-              margin: 0;
-              }}
-
-
-
-
+/* ONLY NAVS */
 
 nav { border: 1px dotted grey;
-      color: black;}
-  ul {
-    li {  list-style-type:none;
-            text-decoration: none;
-            display:inline-block;
-            margin-left: 50px;
-    }}
+      color: black;
+  ul {  padding:0;
+    li {  text-align: center;
+          list-style-type:none;
+          text-decoration: none;
+    }}}
 
-  .sign { 
-          float:right;
-  }
+/* FORMS ONLY */
+
+.links a{color:white;
+        text-decoration: none
+}
+
+.form { margin-top: 10%;
+        // display: inline-block;
+        padding: 0;
+        text-align: center;
+        color:white;}
+
+.formBody { padding: 12px;
+            color:white;
+            background-color: #628e9d;
+            margin-top: 0 }
+
+.formBody h2{ font-family: "texgyros";
+              font-size: 2em;
+              margin-top: 50px;
+              border-top: 1px dotted white;
+              border-bottom: 1px dotted white }
+
+.votes a{ font-size: 3em;
+          text-decoration: none;
+          color: white;
+           }
+.votes { margin-bottom: 30px }
+
+.input{color:black}
+
+header{ font-size: 2em;
+        font-family: "texgyros";
+        background-color: #c3d29f;
+        width:100%;
+        padding:20px;
+        margin: 0}
 
 
-#taken { 
-          display: none; }
+.button { border: 1px dotted white}   
 
+  .feedback{ background-color: #628e9d;
+        padding-top:10px;
+        font-size: 1em;
+        color: black}
+
+        p { color: white;
+            font-size: 1.5em}
+       
+        
+
+
+
+
+
+
+
+
+
+#taken {  display: none; }
+
+/* MAIN PAGE ONLY  */
+
+main {  position:relative;
+        height:100%;
+        border: 4px dotted white;}
 
 article { position: relative;
           border: 1px dotted grey;
           min-height: 100%;
           background-size: cover;
           height: 100%;
-          font-size: 1.5em;
+          font-size: 1.5em;}
+.textbox { 
+            background-color: black;
+            display: inline-block;
+            color: white;}
 
+.tippName{ font-size: 1.5em;}
 
-
-  .textbox { background-color: black;
-             display: inline-block;
-             color: white;
-  }}
   
- .bottom {font-size: 1.5em; 
-          border: 1px solid white;
+.bottom { font-family: "texgyros"; 
           color:red;
+          font-size: 1em; 
+          border: 1px solid white;
           position: absolute;
-          bottom: 10px; }
-
-  article a { text-decoration :none;
-      color:white;
-    }
+          bottom: 10px; 
+          background: black}
+.bottom a { font-family: "texgyros";
+            font-size: 2em;
+            color:white;
+            text-decoration :none;}
