--- a/app/views/tipps/index.html.erb
+++ b/app/views/tipps/index.html.erb
@@ -1,10 +1,17 @@
-<h1>Welcome to the randomizer:</h1>
+
+    <main class="Row">
+      
+      <h1>Welcome to the randomizer:</h1>
+
+    </main>
 
 
   <% @random_choices.each do |tipp| %>
     <article class="row" style="background-image: url(<%= tipp.image_url if tipp.image? %><%= tipp.remote_image_url if tipp.image? %>)">
      
-      <div class='textbox name col-xs-12'>
+
+
+      <div class='textbox tippName col-xs-12'>
           <h2>  <% if tipp.offer %> Special! <% end %> <%= tipp.name %> </h2> 
       </div>
       
@@ -17,13 +24,13 @@
       <div class="bottom col-xs-12">
 
           <% if tipp.website %>
-        <div class='textbox col-xs-4'>
+        <div class='col-xs-4'>
           <a href="<%= tipp.website %>"> W W W </a>
         </div>
           <% end %>
 
           <% if tipp.website %>
-        <div class='textbox col-xs-4'>
+        <div class='col-xs-4'>
           <a href="https://www.google.com/maps/place/<%= tipp.streetname %>"> <%= tipp.streetname %> </a>
         </div>
           <% end %>
